--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -16,11 +16,11 @@ on:
 env:
   MANIFEST: https://gitlab.com/OrangeFox/Manifest.git
   MANIFEST_BRANCH: fox_9.0
-  DEVICE: rosy
-  DT_LINK: https://github.com/ElytrA8/recovery_rosy
-  DT_PATH: device/xiaomi/rosy
-  TARGET: recoveryimage
-  TZ: Asia/Kolkata
+  DEVICE: kyoto
+  DT_LINK: https://github.com/forforksake/android_device_motorola_kyoto
+  DT_PATH: device/motorola/kyoto
+  TARGET: bootimage
+  TZ: GMT
 
 jobs:
   build:
