--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -67,9 +67,9 @@ jobs:
        - uses: actions/upload-artifact@v2
          with:
           name: recoveryzip
-          path: work/out/target/product/*/*.zip
+          path: work/out/target/product/*/boot.img
 
        - uses: actions/upload-artifact@v2
          with:
           name: recoveryimage
-          path: work/out/target/product/*/*.img
+          path: work/out/target/product/*/ramdisk-recovery.img
