--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -14,13 +14,13 @@ on:
     types: [started]
 
 env:
-  MANIFEST: https://github.com/minimal-manifest-twrp/platform_manifest_twrp_aosp.git -b twrp-11
+  MANIFEST: https://github.com/PitchBlackRecoveryProject/manifest_pb -b android-11.0
   DEVICE: kyoto
-  DT_LINK: https://github.com/forforksake/android_device_motorola_kyoto
+  DT_LINK: https://github.com/forforksake/android_device_motorola_kyoto-pbrp
   DT_PATH: device/motorola/kyoto
   TARGET: bootimage
   VENDOR: motorola
-  TZ: GMT
+  TZ: Europe/London
   
   
 jobs:
@@ -55,7 +55,7 @@ jobs:
        - name: Build
          run: |
               cd work
-              . build/envsetup.sh && lunch twrp_$DEVICE-eng && export ALLOW_MISSING_DEPENDENCIES=true && mka $TARGET
+              . build/envsetup.sh && lunch omni_$DEVICE-eng && export ALLOW_MISSING_DEPENDENCIES=true && mka pbrp
              
        - name: Upload recovery image 
          run: |
@@ -66,10 +66,10 @@ jobs:
 
        - uses: actions/upload-artifact@v2
          with:
-          name: recoveryzip
+          name: recoveryimage
           path: work/out/target/product/*/boot.img
 
        - uses: actions/upload-artifact@v2
          with:
-          name: recoveryimage
-          path: work/out/target/product/*/ramdisk-recovery.img
+          name: recoveryzip
+          path: work/out/target/product/*/*.zip
