--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -39,7 +39,7 @@ jobs:
             sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
             sudo -E apt-get clean
             sudo apt update
-            sudo apt install bc build-essential zip curl libstdc++6 git wget python gcc clang rsync flex curl bison liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev aria2 -y
+            sudo apt install bc build-essential zip curl libstdc++6 git wget 2to3 python2-minimal python2 dh-python python-is-python3 gcc clang rsync flex curl bison liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev aria2 -y
             sudo curl --create-dirs -L -o /usr/local/bin/repo -O -L https://storage.googleapis.com/git-repo-downloads/repo
             sudo chmod a+rx /usr/local/bin/repo
             
